# pymfcd

./: .coverage  .gitignore  .mfc_daemon_instructive.py.swp  BACKLOG.md  DESIGN.md  EXPERIMENT_LOG.md  LICENSE  Makefile  README.md  TEST_PLAN.md  a.out  commit_logic.sh  get_mfcctl_size  get_mfcctl_size.c  go.mod  linux_multicast_deep_dive.md  linux_multicast_routing_explained.md  linux_multicast_routing_guide.md  listen_multicast.py  mfc_c_test  mfc_c_test.c  mfc_daemon.py  mfc_daemon_cffi.py  mfc_daemon_instructive.py  mfc_harness.py  mfc_logic.py  mfc_modifier.py  mfc_modifier_final.py  mfc_modifier_legacy.py  mfc_modifier_pyroute2.py  mfc_reader.go  mfc_reader_ctypes.py  mfc_reader_ctypes_debug.py  mfc_single_vif.c  mfc_single_vif_veth.c  mfc_tool.c  mfc_tool.py  pyproject.toml  route_reader_debug.py  run_c_test.py  (+7 more)
pyroute2_reference/ipdb/: interfaces.py
pyroute2_reference/remote/: iproute.py
pyroute2_reference/requests/: route.py
src/: common.py  config.py  daemon_main.py  kernel_ffi.py  mfc_cli.py  mfc_daemon.py  validation.py
systemd/system/: mfc_daemon.service
tests/: README.md  cli_tests.txt  daemon_tests.txt  integration_tests.txt  test_cli_output.py  test_cli_validation.py  test_common.py  test_config.py  test_functional.py  test_kernel_ffi.py  test_mfc_cli.py  test_mfc_daemon.py  test_multicast_snat_rpf.py  test_multicast_trace.py  test_rpf_failure.py  test_rpf_pass.py  test_validation.py  test_veth_trace.py
