[project]
name = "mfc_controller"
version = "0.1.0"
description = "A daemon and CLI for managing Linux multicast forwarding rules."

dependencies = [
    "pytest-timeout",
    "jsonschema",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
exclude = [
    "__pycache__",
    "pyroute2", # Exclude vendored library
    "iproute2", # Exclude vendored library
    "linux", # Exclude vendored library
    "pyroute2_reference", # Exclude vendored library
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/( 
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | iproute2
  | linux
  | pyroute2
)
'''
