[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymfcd"
version = "0.1.0"
description = "A daemon and CLI for managing Linux multicast forwarding rules."
readme = "README.md"
authors = [
    {name = "Andrew Cooks", email = "andrew.cooks@example.com"},
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]

dependencies = [
    "cffi",
    "pyroute2",
    "jsonschema",
]

[project.urls]
"Homepage" = "https://github.com/your-username/pymfcd"
"Bug Tracker" = "https://github.com/your-username/pymfcd/issues"

[project.scripts]
mfc-cli = "pymfcd.mfc_cli:main"

[tool.ruff]
line-length = 88
exclude = [
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/kernel_ffi.py" = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
